exporting normmdl function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(epiInf.EM)
 export(epimdl.norm.init)
 export(fit_epi_beta)
 export(normfit_em)
+export(normmdl)
 export(normpen)
 export(poispen)
 export(poisson_error)
