add parametric models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(poisson_error)
 export(sqrtpen)
 export(sqrtpen_diffuse)
 export(stabfunc)
+export(stat.mdl.lin.fit)
+export(stat.mdl.lin.pred)
 export(stat.mdl.sl.fit)
 export(stat.mdl.sl.pred)
 export(stat.mdl.sl.pred.ex)
